[package]
name = "river"
version = "0.1.0"
authors = ["Andrés Villalobos <andresalvivar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.25", features = ["full"] }
egg-mode = "0.15.0"
