[package]
name = "river"
version = "0.1.0"
authors = ["Andrés Villalobos <andresalvivar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.25", features = ["full"] }
egg-mode = "0.15.0"
yansi = "0.5.0"
chrono = "0.4.19"
walkdir = "2.3.1"
clap = "2.33.3"
self_update = "0.26.0"
anyhow = "1.0.38"